# thesis-code

./: CMakeLists.txt  TPM.cpp  TPM.h  main.cpp  structures.h  testSealing.cpp  testSealing.h
